--- a/config.plist
+++ b/config.plist
@@ -10,6 +10,8 @@
 		<dict>
 			<key>Fixes</key>
 			<dict>
+				<key>FixHDA</key>
+				<true/>
 				<key>FixHeaders</key>
 				<true/>
 				<key>FixIPIC</key>
@@ -611,6 +613,8 @@
 			<key>Inject</key>
 			<true/>
 		</dict>
+		<key>UseIntelHDMI</key>
+		<true/>
 	</dict>
 	<key>DisableDrivers</key>
 	<array>
