--- a/clover_kexts/AsusNBFnKeys.kext/Contents/Info.plist
+++ b/clover_kexts/AsusNBFnKeys.kext/Contents/Info.plist
@@ -117,7 +117,7 @@
 				<key>FinerVolumeControl</key>
 				<true/>
 				<key>HasMediaFnKeys</key>
-				<false/>
+				<true/>
 				<key>IdleKBacklightAutoOff</key>
 				<true/>
 				<key>IdleKBacklightAutoOffTimeout</key>
