Add patch for TRIM SSD

--- a/config.plist
+++ b/config.plist
@@ -582,6 +582,16 @@
 				<key>InfoPlistPatch</key>
 				<true/>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Enable TRIM for SSD</string>
+				<key>Name</key>
+				<string>com.apple.iokit.IOAHCIBlockStorage</string>
+				<key>Find</key>
+				<data>AEFQUExFIFNTRAA=</data>
+				<key>Replace</key>
+				<data>AAAAAAAAAAAAAAA=</data>
+			</dict>
 		</array>
 	</dict>
 	<key>RtVariables</key>
