--- a/config.plist
+++ b/config.plist
@@ -548,6 +548,30 @@
 				<key>Replace</key>
 				<data>AAAAAAAAAAAAAAA=</data>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Boot graphics glitch, 10.12 (credit denskop)</string>
+				<key>MatchOS</key>
+				<string>10.12.x</string>
+				<key>Name</key>
+				<string>com.apple.iokit.IOGraphicsFamily</string>
+				<key>Find</key>
+				<data>AQAAdSU=</data>
+				<key>Replace</key>
+				<data>AQAA6yU=</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Boot graphics glitch, 10.13 (based on denskop patch)</string>
+				<key>MatchOS</key>
+				<string>10.13.x</string>
+				<key>Name</key>
+				<string>com.apple.iokit.IOGraphicsFamily</string>
+				<key>Find</key>
+				<data>AQAAdSI=</data>
+				<key>Replace</key>
+				<data>AQAA6yI=</data>
+			</dict>
 		</array>
 	</dict>
 	<key>RtVariables</key>
