--- a/clover_kexts/VoodooI2C.kext/Contents/Info.plist
+++ b/clover_kexts/VoodooI2C.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>16F73</string>
+	<string>17F77</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,37 +17,37 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0.3</string>
+	<string>2.0.1</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.0.3</string>
+	<string>2.0.1</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>8E3004b</string>
+	<string>9F2000</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>16E185</string>
+	<string>17E189</string>
 	<key>DTSDKName</key>
-	<string>macosx10.12</string>
+	<string>macosx10.13</string>
 	<key>DTXcode</key>
-	<string>0833</string>
+	<string>0941</string>
 	<key>DTXcodeBuild</key>
-	<string>8E3004b</string>
+	<string>9F2000</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>CSGesture Multitouch Engine</key>
+		<key>Native Multitouch Engine</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.alexandred.VoodooI2C</string>
 			<key>IOClass</key>
-			<string>VoodooI2CCSGestureEngine</string>
+			<string>VoodooI2CNativeEngine</string>
 			<key>IOMatchCategory</key>
-			<string>VoodooI2CCSGestureEngine</string>
+			<string>VoodooI2CNativeEngine</string>
 			<key>IOProviderClass</key>
 			<string>VoodooI2CMultitouchInterface</string>
 		</dict>
