--- a/config_parts/config_master.plist
+++ b/config_parts/config_master.plist
@@ -373,6 +373,10 @@
 				</dict>
 			</array>
 		</dict>
+		<key>Hide</key>
+		<array>
+			<string>Preboot</string>
+		</array>
 		<key>Mouse</key>
 		<dict>
 			<key>Enabled</key>
