--- a/config_parts/config_master.plist
+++ b/config_parts/config_master.plist
@@ -391,11 +391,6 @@
 			<key>Inject</key>
 			<string>0</string>
 		</dict>
-		<key>FakeID</key>
-		<dict>
-			<key>IntelGFX</key>
-			<string>fakeid_intelgfx_placeholder</string>
-		</dict>
 		<key>USB</key>
 		<dict>
 			<key>AddClockID</key>
@@ -457,14 +452,12 @@
 	</dict>
 	<key>Graphics</key>
 	<dict>
-		<key>ig-platform-id</key>
-		<string>ig-platform-id_placeholder</string>
 		<key>Inject</key>
 		<dict>
 			<key>ATI</key>
 			<false/>
 			<key>Intel</key>
-			<true/>
+			<false/>
 			<key>NVidia</key>
 			<false/>
 		</dict>
