--- a/src/config_parts/config_master.plist
+++ b/src/config_parts/config_master.plist
@@ -378,7 +378,7 @@
 	<key>Boot</key>
 	<dict>
 		<key>Arguments</key>
-		<string>dart=0 nv_disable=1 kext-dev-mode=1 -disablegfxfirmware keepsyms=1</string>
+		<string>dart=0 nv_disable=1 kext-dev-mode=1 keepsyms=1</string>
 		<key>DefaultVolume</key>
 		<string>LastBootedVolume</string>
 		<key>NeverHibernate</key>
