--- a/src/config_parts/config_master.plist
+++ b/src/config_parts/config_master.plist
@@ -659,7 +659,7 @@
 	<key>RtVariables</key>
 	<dict>
 		<key>CsrActiveConfig</key>
-		<string>0x67</string>
+		<string>0x3E7</string>
 		<key>BooterConfig</key>
 		<string>0x28</string>
 	</dict>
