--- a/src/config_parts/config_master.plist
+++ b/src/config_parts/config_master.plist
@@ -491,6 +491,7 @@
 	<key>DisableDrivers</key>
 	<array>
 		<string>VBoxHfs</string>
+		<string>SMCHelper</string>
 	</array>
 	<key>GUI</key>
 	<dict>
