Hide 'Welcome to Clover'

--- a/src/config_parts/config_master.plist
+++ b/src/config_parts/config_master.plist
@@ -383,6 +383,8 @@
 		<string>LastBootedVolume</string>
 		<key>NeverHibernate</key>
 		<true/>
+		<key>NoEarlyProgress</key>
+		<true/>
 		<key>Secure</key>
 		<false/>
 		<key>Timeout</key>
